# cookiecutter

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.repo_name}}/doc/: requirements.txt
{{cookiecutter.repo_name}}/doc/source/: conf.py  index.rst  usage.rst
{{cookiecutter.repo_name}}/doc/source/admin/: index.rst
{{cookiecutter.repo_name}}/doc/source/cli/: index.rst
{{cookiecutter.repo_name}}/doc/source/configuration/: index.rst
{{cookiecutter.repo_name}}/doc/source/contributor/: contributing.rst
{{cookiecutter.repo_name}}/doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
{{cookiecutter.repo_name}}/doc/source/reference/: index.rst
{{cookiecutter.repo_name}}/doc/source/user/: index.rst
{{cookiecutter.repo_name}}/releasenotes/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/tests/: test_{{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/: __init__.py  test_{{cookiecutter.repo_name}}.py
