[metadata]
name = {{ cookiecutter.repo_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    {{ cookiecutter.module_name }}

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = {{cookiecutter.module_name}}/locale
domain = {{cookiecutter.module_name}}

[update_catalog]
domain = {{cookiecutter.module_name}}
output_dir = {{cookiecutter.module_name}}/locale
input_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.module_name}}.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.module_name}}.pot
